updating the executable names

--- a/opcua_ur_rtde/CMakeLists.txt
+++ b/opcua_ur_rtde/CMakeLists.txt
@@ -19,23 +19,24 @@ find_library(MBEDTLS_LIBRARY mbedtls REQUIRED)
 find_library(MBEDX509_LIBRARY mbedx509 REQUIRED)
 find_library(MBEDCRYPTO_LIBRARY mbedcrypto REQUIRED)
 
-
-
 include_directories(include)
 
 
 add_library(ur_opcua_server STATIC src/open62541.c src/server_opcua_ur5e.c)
 target_link_libraries(ur_opcua_server pthread ${MBEDTLS_LIBRARY} ${MBEDX509_LIBRARY} ${MBEDCRYPTO_LIBRARY})
 
+add_executable(server_from_generated_ur5e_model src/server_opcua_generated_ur5e.c src/open62541.c src/robot.c)
+target_link_libraries(server_from_generated_ur5e_model pthread ${MBEDTLS_LIBRARY} ${MBEDX509_LIBRARY} ${MBEDCRYPTO_LIBRARY})
 
-add_executable(opcua_server_ur5e src/server_rtde_feeddata.cpp)
-target_link_libraries(opcua_server_ur5e
+add_executable(opcua_server_ur5e_RTDE src/server_rtde_feeddata.cpp)
+target_link_libraries(opcua_server_ur5e_RTDE
   PUBLIC ur_opcua_server
   PRIVATE ur_rtde::rtde
 )
 
 install(TARGETS
-  opcua_server_ur5e
+  opcua_server_ur5e_RTDE
+  server_from_generated_ur5e_model
   DESTINATION lib/${PROJECT_NAME}
 )
 
